Modificadas imágenes de las cards

--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@
 
     <section class="card__section">
       <article class="card">
-        <img src="assets/img/hoja.png" alt="" />
+        <img src="assets/img/camino.png" alt="Imagen sendero" />
         <p>Explora senderos inexplorados.</p>
         <button>Más información</button>
       </article>
@@ -64,22 +64,22 @@
         <button>Más información</button>
       </article>
       <article class="card">
-        <img src="assets/img/naturaleza.png" alt="" />
+        <img src="assets/img/montana.png" alt="" />
         <p>Aventuras entre montañas</p>
         <button>Más información</button>
       </article>
       <article class="card">
-        <img src="assets/img/naturaleza.png" alt="" />
+        <img src="assets/img/hoja.png" alt="" />
         <p>Conéctate con la naturaleza..</p>
         <button>Más información</button>
       </article>
       <article class="card">
-        <img src="assets/img/naturaleza.png" alt="" />
+        <img src="assets/img/planta.png" alt="" />
         <p>Productos naturales, calidad auténtica.</p>
         <button>Más información</button>
       </article>
       <article class="card">
-        <img src="assets/img/naturaleza.png" alt="" />
+        <img src="assets/img/colina.png" alt="" />
         <p>Senderos que inspiran..</p>
         <button>Más información</button>
       </article>
