Modificados estilos imágenes de las card y añadido icono scroll down en hero__section

--- a/index.html
+++ b/index.html
@@ -30,7 +30,15 @@
     </nav>
     <section class="hero__section">
       <div class="hero__section-content">
+        
         <img src="assets/img/hoja-hero.png" alt="" />
+        <div class="scroll__down-container">
+          <p>Scroll Down</p>
+          <a href="#footer">
+          <i class="fa-solid fa-arrow-down"></i>
+        </a>
+          
+        </div>
         <p>
           Nuestro compromiso con la innovación y la excelencia nos impulsa a
           alcanzar nuevos horizontes cada día. En el corazón de nuestra misión
@@ -62,9 +70,7 @@
             Sumérgete en la maravilla de un bosque entre montañas y lagos, donde
             la diversidad de fauna revela un espectáculo único. Nuestra empresa
             se especializa en rutas diseñadas para la observación de la vida
-            silvestre en un entorno natural extraordinario. Acompañados por
-            guías expertos, podrás descubrir la variedad de especies que llaman
-            a este bosque su hogar.
+            silvestre en un entorno natural extraordinario. 
           </p>
         </div>
         <button>Más información</button>
@@ -85,7 +91,7 @@
       </article>
     </section>
 
-    <footer>
+    <footer id="footer">
       <a href="#"><img class="logo" src="assets/img/logo.svg" alt="" /></a>
       <div class="footer__content">
         <div class="footer__content-item">
