--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
     <section class="hero__section">
       <video autoplay loop muted playsinline class="video-background">
         <source src="../assets/video/video.mp4" type="video/mp4">
-        Your browser does not support the video tag.
+        Su navegador no soporta el formato del vídeo.
       </video>
       <div class="hero__section-content">
         <img src="assets/img/hoja-hero.png" alt="" />
