--- a/index.html
+++ b/index.html
@@ -16,6 +16,7 @@
         <nav>
           <a href="#">Inicio</a>
           <a href="templates/about.html">Acerca de</a>
+          <a href="templates/gallery.html">Galería</a>
           <a href="templates/contact.html">Contacto</a>
         </nav>
         <button class="burger">
@@ -23,11 +24,14 @@
         </button>
       </div>
     </header>
+    
     <nav class="mobile-nav">
       <a href="#">Inicio</a>
       <a href="templates/about.html">Acerca de</a>
+      <a href="templates/gallery.html">Galería</a>
       <a href="templates/contact.html">Contacto</a>
     </nav>
+
     <section class="hero__section">
       <video autoplay loop muted playsinline class="video-background">
         <source src="../assets/video/video.mp4" type="video/mp4">
