--- a/index.html
+++ b/index.html
@@ -6,17 +6,14 @@
     <title>Document</title>
     <link rel="shortcut icon" href="favicon.ico" type="image/x-icon" />
     <link rel="stylesheet" href="css/index.css" />
-    <link rel="stylesheet" href="scss/dark.css" />
   </head>
   <body>
     <header>
       <div class="container">
-        <a href="#"
-          ><img class="logo" src="assets/img/logo.svg" alt=""
-        data-logo-light/></a>
-        <a href="#"
-          ><img class="logo" src="assets/img/white_logo_transparent_background.png" alt=""
-        data-logo-dark"/></a>
+        <a href="#">
+          <img class="logo" src="assets/img/logo.svg" alt="" data-logo="light"/>
+          <img class="logo" src="assets/img/white_logo_transparent_background.png" alt="" data-logo="dark"/>   
+        </a>
         <div class="switch-container">
           <button class="switch" id="switch">
             <span><i class="fa-solid fa-sun"></i></span>
@@ -109,7 +106,11 @@
     </section>
 
     <footer id="footer">
-      <a href="#"><img class="logo" src="assets/img/logo.svg" alt="" /></a>
+      <a href="#">
+        <img class="logo" src="assets/img/logo.svg" alt="" data-logo="light"/>
+        <img class="logo" src="assets/img/white_logo_transparent_background.png" alt="" data-logo="dark"/>   
+      </a>
+        
       <div class="footer__content">
         <div class="footer__content-item">
           <h4>Servicios</h4>
